treewide: Add Saxon SoC USB 1.1 (OHCI) controller

--- a/Bender.yml
+++ b/Bender.yml
@@ -40,6 +40,7 @@ sources:
   - hw/regs/cheshire_reg_top.sv
   - hw/cheshire_pkg.sv
   - hw/cheshire_soc.sv
+  - hw/future/UsbOhciAxi4.v
 
   - target: any(simulation, test)
     files:
