--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -39,6 +39,7 @@ jobs:
       uses: chipsalliance/verible-linter-action@main
       with:
         paths: hw
+        exclude_paths: hw/future/UsbOhciAxi4.v
         extra_args: "--waiver_files .github/verible.waiver"
         github_token: ${{ secrets.GITHUB_TOKEN }}
         fail_on_error: true
