Point cva6-sdk to commit including framebuffer

--- a/sw/boot/cheshire.dtsi
+++ b/sw/boot/cheshire.dtsi
@@ -16,6 +16,15 @@
 
   chosen {
     stdout-path = "/soc/serial@3002000:115200";
+    framebuffer0: framebuffer@A0000000 {
+      compatible = "simple-framebuffer"; 
+      reg = <0x0 0xA0000000 0x0 (800 * 600 * 3)>;
+      width = <800>;
+      height = <600>;
+      stride = <(800 * 3)>;
+      format = "r8g8b8";
+      status = "okay";
+    };
   };
   memory@80000000 {
     device_type = "memory";
@@ -87,9 +96,13 @@
       #address-cells = <1>;
       #size-cells = <0>;
     };
-    vga@3007000 {
+    axi_vga: vga@3007000 {
       compatible = "eth,axi-vga";
       reg = <0x0 0x3007000 0x0 0x1000>;
+    };
+    axi2hdmi: vga@3008000 {
+      compatible = "eth,axi-vga";
+      reg = <0x0 0x3008000 0x0 0x1000>;
     };
     clint@2040000 {
       compatible = "riscv,clint0";
