--- a/Bender.yml
+++ b/Bender.yml
@@ -30,7 +30,7 @@ dependencies:
   riscv-dbg:                { git: "https://github.com/pulp-platform/riscv-dbg.git",              version: 0.8.1  }
   serial_link:              { git: "https://github.com/pulp-platform/serial_link.git",            version: 1.1.1  }
   unbent:                   { git: "https://github.com/pulp-platform/unbent.git",                 version: 0.1.6  }
-  axi2hdmi:                 { git: "/home/bsc24f12/PAPER_hw",          rev: benderize-mgedik  }
+  axi2hdmi:                 { git: "/home/bsc24f12/PAPER_hw",    rev: "20ad9c09a618f6ab52e415353c2332f16c34f3fd"  }
 
 export_include_dirs:
   - hw/include
